[package]
name = "qfilter"
version = "0.1.1"
description = "Approximate Membership Query Filter (AMQ-Filter) based on the Rank Select Quotient Filter (RSQF)"
repository = "https://github.com/arthurprs/qfilter"
authors = ["Arthur Silva <arthurprs@gmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["rsqf", "cqf", "quotient-filter", "bloom-filter", "cuckoo-filter"]
categories = ["data-structures"]
readme = "README.md"
exclude = ["fuzz", "benches"]

[features]
default = []
# Enable to support running on x64 cpus released before 2008
legacy_x86_64_support = []

[dependencies]
bitvec = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"

[dev-dependencies]
serde_cbor = "0.11"

[profile.bench]
opt-level = 3
debug = true
